# MC970-Final-Project

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  grid.rs  lib.rs  main.rs  renderer.rs
src/cell/: grid.rs  mod.rs
src/engine/: mod.rs  parallel.rs  serial.rs
