[package]
name = "vida"
authors = ["Tiago de Paula Alves", "Vitor Jundi Moriya"]
description = "Conway's Game of Life in Rust"
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[dependencies]
clap = { version = "4.3", features = ["default", "derive", "unicode"] }
rand = { version = "0.8", features = ["default", "small_rng"] }
rayon = "1.7"
piston_window = "0.128"

[profile.release]
codegen-units = 1
lto = true
